--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@hawk.so/javascript": "^3.2.6",
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
